# CurseMarkClone

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: FindSDL3Package.cmake
source/: CMakeLists.txt  game.cpp
source/engine/: CMakeLists.txt  engine.cpp  engine.h
source/game/: CMakeLists.txt  game.cpp
